Remove unsupported JVM options