@@ -16,7 +16,7 @@ MAINTAINER Joshua Krage <jkrage@guisarme.us>
 ###   FILE_BUILDTOOL sets download location for Spigot's BuildTools
 ###     (default: https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/    BuildTools.jar)
 ###
-ENV JVM_OPTS="-Xms512M -Xmx512M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts"
+ENV JVM_OPTS="-Xms512M -Xmx512M -XX:+AggressiveOpts"
 ENV SPIGOT_OPTS="nogui --noconsole"
 ENV SPIGOT_REV="1.13.2"
 ENV SPIGOT_BUILD_REV="latest"
@@ -46,7 +46,7 @@ USER minecraft
 WORKDIR ${MINECRAFT_BUILD}
 RUN wget -O BuildTools.jar ${FILE_BUILDTOOL} \
     && java -jar BuildTools.jar --rev ${SPIGOT_BUILD_REV} \
-    && mv spigot-${SPIGOT_REV}.jar craftbukkit-${SPIGOT_REV}.jar ${MINECRAFT_JAR} \
+    && mv spigot-${SPIGOT_REV}.jar ${MINECRAFT_JAR} \
     && rm -rf ${MINECRAFT_BUILD}/*
 
 # Switch to where the server will run
